--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	
 	
 	
-	<script src="libs/jquery/dist/jquery.min.js"></script>
+	<script src="js/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
 	<script src="js/lightgallery.min.js"></script>
 	<script src="js/angular.min.js"></script>
