--- a/index.html
+++ b/index.html
@@ -69,20 +69,21 @@
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="form">
-					<form action="form.php">
+					<form method="post" action="/form.php">
 						<div class="form-group">
 							<label for="nmb">Номер вашего телефона:</label>
-							<input type="text" class="form-control" id="nmb" placeholder="+38(093)-000-00-00" required>
+							<input type="text" class="form-control" id="phone" name="nmb" placeholder="+38(093)-000-00-00" required>
 						</div>
 						<div class="form-group">
 							<label for="nm">Ваше имя:</label>
-							<input type="text" class="form-control" id="nm" placeholder="Люк Скайуокер" required>
+							<input type="text" class="form-control" id="nm" name="nm" placeholder="Люк Скайуокер" maxlength="30" required>
 						</div>
 						<div class="form-group">
-							<label for="comment"></label>
-							<textarea class="form-control" rows="5" id="comment"></textarea>
+							<label for="message"></label>
+							<textarea class="form-control" rows="5" id="cmnt" name="msg"></textarea>
 						</div>
-						<button type="button" class="btn btn-default" name="send" id="send">Отправить</button>
+						<button type="button" class="btn btn-primary" data-dismiss="modal">Закрыть</button>
+						<button type="submit" class="btn btn-default" name="submit" id="submit">Отправить</button>
 					</form>
 				</div>
 			</div>
@@ -92,12 +93,13 @@
 	
 	
 	
-	<script src="js/jquery.min.js"></script>
+	<script src="libs/jquery/dist/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
 	<script src="js/lightgallery.min.js"></script>
 	<script src="js/angular.min.js"></script>
 	<script src="js/angular-route.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/jquery.maskedinput.min.js"></script>
 	<script src="js/common.js"></script>
 
 </body>
