--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
 					<form method="post" action="/form.php">
 						<div class="form-group">
 							<label for="nmb">Номер вашего телефона:</label>
-							<input type="text" class="form-control" id="phone" name="nmb" placeholder="+38(093)-000-00-00" required>
+							<input type="text" class="form-control" id="phone" name="phone" placeholder="+38(093)-000-00-00" required>
 						</div>
 						<div class="form-group">
 							<label for="nm">Ваше имя:</label>
-							<input type="text" class="form-control" id="nm" name="nm" placeholder="Люк Скайуокер" maxlength="30" required>
+							<input type="text" class="form-control" id="nm" name="name" placeholder="Люк Скайуокер" maxlength="30" required>
 						</div>
 						<div class="form-group">
 							<label for="message"></label>
-							<textarea class="form-control" rows="5" id="cmnt" name="msg"></textarea>
+							<textarea class="form-control" rows="5" id="cmnt" name="message"></textarea>
 						</div>
 						<button type="button" class="btn btn-primary" data-dismiss="modal">Закрыть</button>
 						<button type="submit" class="btn btn-default" name="submit" id="submit">Отправить</button>
