--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 							<label for="message"></label>
 							<textarea class="form-control" rows="5" id="cmnt" name="message"></textarea>
 						</div>
-						<button type="button" class="btn btn-primary" data-dismiss="modal">Закрыть</button>
-						<button type="submit" class="btn btn-default" name="submit" id="submit">Отправить</button>
+						<button type="button" class="btn btn-danger" data-dismiss="modal">Закрыть</button>
+						<button type="submit" class="btn btn-primary" name="submit" id="submit">Отправить</button>
 					</form>
 				</div>
 			</div>
